2005-10-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/strutil.c (xstrlcat, xstrlcpy), include/am_utils.h
	(DEBUG): if debugging is on, then also print the source file name
	and line number that called xstrl* with a buffer that wasn't large
	enough (most likely an am-utils bug)

	* include/am_compat.h (INADDR_NONE): define in a common location,
	if OS doesn't have it, use 0xffffffffU which should work with any
	ANSI compiler.

	* fixmount/fixmount.c, libamu/wire.c: remove local definition of
	INADDR_NONE.

	* amd/amfs_toplvl.c (amfs_toplvl_mount), amd/amfs_auto.c
	(amfs_auto_mount): use common SIZEOF_OPTS in definition and call
	to autofs_get_opts.

	* amd/amd.h (SIZEOF_OPTS): moved #define to common header.

2005-10-06  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* amd/opts.c (expand_op): Need to check BUFSPACE for env for
	vlen+1.  Likewise for cp and strlen(cp)+1.

	* amd/amfs_toplvl.c (amfs_toplvl_mount) [HAVE_FS_AUTOFS]: Pass new
	size argument to autofs_get_opts.

2005-10-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (transform_dir): use TCP first, else UDP.  Destroy
	client after use to avoid leftover TCP sockets in the kernel.

	* libamu/hasmntopt.c (amu_hasmntopt): increase size of MNTMAXSTR
	from 128 to to 256, because some users have really long option
	strings.  Suggestion from jon+amd-at-spock.org.

	* amd/opts.c (expand_op): should check BUFSPACE for vlen+1, not
	just vlen.  Bug discovered when started using xstrlcpy().

	* ALL: convert from using strcat to the safer xstrlcat, and from
	strcpy to safer xstrlcpy.

2005-10-04  Erez Zadok  <ezk@cs.sunysb.edu>

	* hlfsd/hlfsd.h: remove old fatalerror() and ERRM macros.

	* hlfsd/hlfsd.c (fatalerror): new function instead of macro.
	Easier to use xstrlcat in this new function.

	* amd/amd.h, include/am_utils.h, amd/amd.c: moved 'hostd' extern
	from am_utils.h to amd.h, and define its size as a macro that
	could be passed to xstrl*().

	* ALL: convert from using sprintf to the safer xsnprintf.
